# phtevencoin

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libphtevencoinconsensus.pc.in
.tx/: config
build-aux/m4/: phtevencoin_find_bdb48.m4  phtevencoin_qt.m4  phtevencoin_subdir_to_include.m4
contrib/: README.md  phtevencoin-qt.pro  phtevencoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  phtevencoin-qt.desktop  phtevencoin-qt.install  phtevencoin-qt.lintian-overrides  phtevencoin-qt.protocol  phtevencoin-tx.install  phtevencoind.bash-completion  phtevencoind.examples  phtevencoind.install  phtevencoind.lintian-overrides  rules  watch  (+1 more)
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  eccryptoverify.cpp  eccryptoverify.h  ecwrapper.cpp  (+84 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  (+67 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: phtevencoin_ach.ts  phtevencoin_af_ZA.ts  phtevencoin_ar.ts  phtevencoin_be_BY.ts  phtevencoin_bg.ts  phtevencoin_bs.ts  phtevencoin_ca.ts  phtevencoin_ca@valencia.ts  phtevencoin_ca_ES.ts  phtevencoin_cmn.ts  phtevencoin_cs.ts  phtevencoin_cy.ts  phtevencoin_da.ts  phtevencoin_de.ts  phtevencoin_el_GR.ts  phtevencoin_en.ts  phtevencoin_eo.ts  phtevencoin_es.ts  phtevencoin_es_CL.ts  phtevencoin_es_DO.ts  phtevencoin_es_MX.ts  phtevencoin_es_UY.ts  phtevencoin_et.ts  phtevencoin_eu_ES.ts  phtevencoin_fa.ts  phtevencoin_fa_IR.ts  phtevencoin_fi.ts  phtevencoin_fr.ts  phtevencoin_fr_CA.ts  phtevencoin_gl.ts  phtevencoin_gu_IN.ts  phtevencoin_he.ts  phtevencoin_hi_IN.ts  phtevencoin_hr.ts  phtevencoin_hu.ts  phtevencoin_id_ID.ts  phtevencoin_it.ts  phtevencoin_ja.ts  phtevencoin_ka.ts  phtevencoin_kk_KZ.ts  (+31 more)
src/qt/res/: phtevencoin-qt-res.rc
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: interpreter.cpp  interpreter.h  phtevencoinconsensus.cpp  phtevencoinconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_phtevencoin_NativeSecp256k1.c  org_phtevencoin_NativeSecp256k1.h
src/secp256k1/src/java/org/phtevencoin/: NativeSecp256k1.java
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  phtevencoin-util-test.py  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  (+12 more)
src/test/data/: README.md  phtevencoin-util-test.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+155 files in other folders)
